--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <h1>
+        Hello World!
+    </h1>
+    <h2>
+        Tuhes
+    </h2>
 </body>
 </html>
