--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             факультет (заочна форма навчання). Було доволі складно навчатись дистанційно 80% часу, але цінні знання
             дозволили успішно працевлаштуватись і
             щодня отримувати задоволення від роботи. </p>
-        <img src="img/Me0.png" alt="Maryna0">
     </div>
     <div class="travelling">
         <a id="travelling">
@@ -54,15 +53,15 @@
             середньовічних споруд і резиденцій королів.
             Своєю різноманітністю та багатогранністю Нідерланди глибоко вразили мене, тому я сподіваюсь ще не раз
             відвідати цю неймовірну країну.</p>
-        <img src="img/Me1.jpg" alt="Maryna1"><img src="img/Me2.jpg" alt="Maryna2"><img src="img/Me3.jpg" alt="Maryna3">
+        <figure><img src="img/Me1.jpg" alt="Maryna1"><img src="img/Me2.jpg" alt="Maryna2"><img src="img/Me3.jpg" alt="Maryna3"></figure>
     </div>
     <aside>
         <table>
             <caption>General information</caption>
             <tr>
-                <td colspan="2">
+                <th colspan="2">
                     Освіта
-                </td>
+                </th>
             </tr>
             <tr>
                 <td>
@@ -96,9 +95,9 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <th colspan="2">
                     Професійний досвід
-                </td>
+                </th>
             </tr>
             <tr>
                 <td>
@@ -143,7 +142,7 @@
             музика — це спільна мова, яку
             розуміють на кожному континенті, у кожному куточку землі. Тому, це та універсальна річ, яка завжди згуртовує
             й об’єднує навколо себе усіх жителів цієї планети.</p>
-        <img src="img/Me4.jpg" alt="Maryna4"><img src="img/Me5.jpg" alt="Maryna5"><img src="img/Me6.jpg" alt="Maryna6">
+        <figure><img src="img/Me4.jpg" alt="Maryna4"><img src="img/Me5.jpg" alt="Maryna5"><img src="img/Me6.jpg" alt="Maryna6"></figure>
     </div>
 
     <div class="reading">
