--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             <h1>Music</h1>
         </a>
         <p>Життя без музики — то, мабуть, не життя. Іноді мені здається, що без музики я б просто не змогла повноцінно
-            існувати. Та й здається, що немає людини, яка б байдуже ставилася до неї, адже в ній є все. Думаю, що зі
+            існувати. Та й немає людини, яка б байдуже ставилася до неї, адже в ній є все. Думаю, що зі
             мною погодиться більшість, якщо
             я скажу, що вона допомагає долати повсякденні труднощі, вона може розрадити у скрутну хвилину та підняти
-            настрій, коли це потрібно; вміє заспокоювати і втішати, як ліпша подруга чи друг. Недарма ж говорять, що
+            настрій, коли це потрібно; вміє заспокоювати і втішати, як ліпша подруга чи друг. Недарма ж кажуть, що
             музика — це спільна мова, яку
             розуміють на кожному континенті, у кожному куточку землі. Тому, це та універсальна річ, яка завжди згуртовує
             й об’єднує навколо себе усіх жителів цієї планети.</p>
@@ -157,7 +157,7 @@
             Розмовляючи з людиною, ти можеш оцінити її рівень освіченості і як часто вона читає книжки. У неї багатший
             словниковий запас, милозвучніша мова. Навіть спілкування стає приємнішим.</p>
         <p>Коли книга є твоїм супутником з дитинства,в дорослому житті набагато легше знаходити вихід з будь-якої ситуації. Які чудеса творить книга. У ХХІ столітті читати модно. Нехай і з різноманітних планшетів чи комп'ютерів, але молодь читає. Що було не типово ще кілька років тому. І це надзвичайно приємно не тільки мені, але і всьому людству. Читаючи, люди розвиваються. І всі це розуміють. </p>
-        <p>Перегортаючи останню сторінку книжки, ми повинні збагачуватися. Новими знаннями, досвідом героїв,порадами автора, які нерідко потрібно прочитати між рядками. Не кожному це вдається, але в читанні, як і в будь-якій справі, потрібний певний досвід.Після однієї прочитаної книги ніхто не стане розумнішим. Але після десятка мудрих книг, достойних уваги, наш словниковий запас обов'язково збільшиться. Що вже є цінним для нас. Це ніби маленька перемога. А доводити самому собі, що ти чогось вартий,- дуже приємно. Підніматися у своїх очах щоразу на сходинку вище і розуміти, що можеш собою гордитися. І цим ми завдячуємо книгам. Отже, читати- це не нудна справа. Це корисно і пізнавально.</p>
+        <p>Перегортаючи останню сторінку книжки, ми повинні збагачуватися. Новими знаннями, досвідом героїв,порадами автора, які нерідко потрібно прочитати між рядками. Не кожному це вдається, але в читанні, як і в будь-якій справі, потрібний певний досвід.Після однієї прочитаної книги ніхто не стане розумнішим. Але після десятка мудрих книг, достойних уваги, наш словниковий запас обов'язково збільшиться. Що вже є цінним для нас. Це ніби маленька перемога. А доводити самому собі, що ти чогось вартий, дуже приємно. Підніматися у своїх очах щоразу на сходинку вище і розуміти, що можеш собою гордитися. І цим ми завдячуємо книгам. Отже, читати — це не нудна справа. Це корисно і пізнавально.</p>
     </div>
     <footer><a href="index.html#general">To the top</a><br>© Maryna Patra. 2020</footer>
 </body>
